# conv2md

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_TEMPLATES.md  CLAUDE_UNIVERSAL.md  CLAUDE_WORKFLOW.md  CONTRIBUTING.md  README.md  pyproject.toml  todo.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-pr-to-main.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  security.yml
claude/templates/: ADR_TEMPLATE.md  ISSUE_TEMPLATE.md  README_TEMPLATE.md
docs/: changelog_rules.md  json-schema.md  markdown-output-specification.md  runbook.md
docs/architecture/: components.mmd  containers.mmd  context.mmd  overview.md
docs/decisions/: ADR-001-core-architecture.md
docs/features/: CONV2MD_FEATURES.md
docs/requirements/: requirements.md
src/conv2md/: __init__.py  cli.py
src/conv2md/adapters/: __init__.py
src/conv2md/application/: __init__.py
src/conv2md/converters/: __init__.py  json_conv.py
src/conv2md/domain/: __init__.py  models.py
src/conv2md/markdown/: __init__.py  (+7 more)
summary/: 2025-08-16-development-summary.md  2025-08-17-development-summary.md  2025-08-18-development-summary.md  2025-08-19-development-summary.md
tests/contract/: __init__.py  test_placeholder.py
tests/integration/: test_determinism.py  test_placeholder.py
tests/unit/: test_cli.py  test_json_converter.py  test_markdown_blocks.py  test_markdown_generator.py  test_markdown_pipeline.py  test_markdown_security.py  test_placeholder.py
(+3 files in other folders)
