[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conv2md"
version = "0.1.0"
description = "A CLI tool for converting files to Markdown format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "safety>=2.0.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.0.0",
]
plugins = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "openai>=1.0.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
conv2md = "conv2md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
